# Energy_Proj

./: .dockerignore  .gitignore  Dockerfile  Makefile  SETUP.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml  train.yml
batch_processing/: deploy.py  prefect_flow.py  preprocessing.py  train.py
data/: europe_energy_1990_2025_cleaned.csv
db/: init.sql
grafana/dashboards/: energy_predictions.json
grafana/provisioning/datasources/: postgres.yml
online_deploy/: app.py
tests/: conftest.py  test_app.py  test_drift.py  test_preprocessing.py  test_train_features.py
